Inserindo nova imagem.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ Este é nosso exemplo! :)
 Aqui é gc_02.
 
 <br><br><br>
-<img src="imagem.jpg" height="300px">
+<img src="imagem2.jpg" height="300px">
 </body>
 </html>
