Preparando as alterações para reverter

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <!-- Conteúdo -->
 Este é nosso exemplo! :)
 <br/>
-<<<<<<< HEAD
-Aqui é gc_01.
-=======
+Aqui é gc_01. Além disso, queremos mostrar que modifica só!
 
 <br><br><br>
 <img src="imagem2.jpg" height="400px">
